Edit packaging